# lgpd-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: f806564091f0_initial_migration.py
app/: database.py  main.py
app/api/: __init__.py  chat.py  deps.py
app/interfaces/: qa_interfaces.py
app/models/: document_chunk.py
app/schemas/: agent.py  api.py  ingestion.py  qa.py
app/services/: agent.py  embeddings.py  ingestion.py  llm.py  qa_service.py  vector_rag_service.py  vector_store.py
data/: lgpd.md
scripts/: check_db.py  fetch_lgpd.py  ingest_data.py
tests/: conftest.py
tests/api/: test_api.py  test_validation.py
tests/infra/: test_database.py
tests/services/: test_agent.py  test_embeddings.py  test_ingestion.py  test_llm.py  test_qa_service.py  test_vector_db.py  test_vector_store.py
